syntax="proto3";

package pb;

message Time{ 
    int32 hour = 1; //小时
    int32 minute = 2; //分钟
    int32 second = 3; //秒
};

/* 服务器 */
enum ServerOrder{ // 服务器指令
    SERERORDER_LOGIN  = 0; // 登录指令
    SERERORDER_SIGNUP = 1; // 注册指令
    SERERORDER_SEND_WAITTIME = 2;// 发送等待时间
};

message Login{
    bool istrue = 1;
};

message SIGNUP{
    bool istrue = 1;
};

//服务器协议
message ServerMessage{
    ServerOrder order = 1;
    Login login = 2;
    SIGNUP signup = 3;
    Time time = 4;
};

//------------------------------------------------------

/* 客户端 */
enum ClientOrder{ // 客户端指令
    CLIENORDER_LOGIN = 0; // 登录指令
    CLIENORDER_SIGNUP = 1;// 注册指令
    CLIENORDER_GET_WAITTIME = 2;// 获取等待时间
};

message User{//用户信息
    string username = 1;
    string password = 2;
};

//客户端协议
message ClientMessage{
    ClientOrder order = 1;
    User user = 2;
};